--- a/Practice 6/Views/DataUserControl.xaml
+++ b/Practice 6/Views/DataUserControl.xaml
@@ -123,7 +123,7 @@
                            FontWeight="Regular"
                            FontFamily="Roboto"/>
                     <Border.InputBindings>
-                        <MouseBinding MouseAction="LeftClick" Command="{Binding GetBooks}"/>
+                        <MouseBinding MouseAction="LeftClick" Command="{Binding UpdateData}"/>
                     </Border.InputBindings>
                 </Border>
             </Grid>
